fixed 'skills' title spacing

--- a/style.css
+++ b/style.css
@@ -120,10 +120,6 @@ section {
   font-size: 1em;
 }
 
-.skills-title {
-  padding-bottom: 50px !important;
-}
-
 .below-fullscreen section ul.paragraphs li, .below-fullscreen section ul.skills li {
   margin: 0 30px;
 }
@@ -323,6 +319,7 @@ section {
   .introduction {padding: 100px 20px 100px !important; margin: 0 10%;}
   ul.skills {padding: 0 !important;}
   .skills {padding: 100px 20px 100px !important; margin: 0 10%;}
+  .skills-title {padding-bottom: 50px !important;}
   .projects {width: 100% !important;}
   .below-fullscreen section .row .project {padding-left: 0 !important;}
   .below-fullscreen section .row+.row {margin-top: 10px !important;}
